--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "full stack"
   ],
   "dependencies": {
-    "express": "^4.17.1"
+    "colors": "^1.4.0",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "optimist": "^0.6.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "morgan": "^1.9.1"
   }
 }
