--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "own-server",
-  "version": "0.0.2",
   "author": "Joshim Uddin <joshimcse@gmail.com>",
+  "version": "0.0.1",
   "description": "A minimalist Zero Configuration local web server for full stack development",
-  "main": "./lib/own-server",
+  "repository": "https://github.com/Joshimcse/own-server.git",
   "license": "ISC",
   "bin": {
-    "os": "./bin/os.js"
+    "own-server": "./bin/os-cli.js",
+    "os": "./bin/os-cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "os",
+    "own-server",
     "local",
     "web",
     "server",
@@ -20,6 +23,9 @@
     "backend",
     "full stack"
   ],
+  "engines": {
+    "node": ">=8"
+  },
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^8.1.0",
